<resources>
    <string name="app_name">OpenNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">OpenNews User</string>
    <string name="nav_header_subtitle">user@opennews.org</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="menu_business">Business</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_sci"><![CDATA[Science & Technology]]></string>
    <string name="menu_ent">Entertainment</string>
    <string name="menu_headlines">Headlines</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="customise">v0.0.1</string>

    <string name="API_KEY" translatable="false">YOUR_API_KEY_HERE</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="invalid_creds">Invalid Credentials. Please try again.</string>
    <string name="user_disabled">Your account is disabled. Contact support.</string>
    <string name="email_pass_req">Email and password are required fields</string>
    <string name="mail_invalid">Email is not valid.</string>
    <string name="pass_invalid">Password must be at least six characters long.</string>
    <string name="something_wrong">Something went wrong. Please try again.</string>
    <string name="gsignin">Log in with Google instead.</string>
    <string name="sports_label">Sports</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="news">News</string>
    <string name="send_notification">Send Notifications</string>
    <string name="default_language">Default Language</string>
    <string name="notification">Notifications</string>
    <string name="use_def_lang">Use default language</string>
    <string name="use_def_lang_on">Default languge is used</string>
    <string name="use_def_lang_off">All languages used for news</string>
    <string name="openNews">OpenNews</string>
    <string name="poweredby">powered by newsapi.org</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="saved_label">Saved Articles</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_internet">No internet connection!</string>
    <string name="turn_on">Turn On</string>
    <string name="title">Title of the article in detail section</string>
    <string name="author">Author</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="menu_saved">Saved Articles</string>
    <string name="article_image">Image of Article Detail</string>
    <string name="dots_string">...</string>
    <string name="content_placeholder">This is the content.</string>
    <string name="email_hint">Email Address</string>
    <string name="pass_hint">Password</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_news">Title of the news</string>
    <string name="author_placeholder">John Doe</string>
    <string name="source_placeholder">BBC News</string>
    <string name="date_placeholder">15 mins ago</string>
</resources>
