<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_headlines"
            android:icon="@drawable/ic_trending_up_24px"
            android:title="@string/menu_headlines"
            android:contentDescription="@string/menu_headlines"/>
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_business_center_24px"
            android:title="@string/menu_business"
            android:contentDescription="@string/menu_business"/>
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/ic_sports_baseball_24px"
            android:title="@string/menu_sports"
            android:contentDescription="@string/menu_sports"/>
        <item
            android:id="@+id/nav_sci"
            android:icon="@drawable/ic_science_fiction"
            android:title="@string/menu_sci"
            android:contentDescription="@string/menu_sci"/>
        <item
            android:id="@+id/nav_ent"
            android:icon="@drawable/ic_movie_filter_24px"
            android:title="@string/menu_ent"
            android:contentDescription="@string/menu_ent"/>
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_unarchive_24px"
            android:title="@string/saved_label"
            android:contentDescription="@string/menu_saved"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24px"
            android:title="@string/settings"
            android:contentDescription="@string/settings"/>
    </group>

<!--    <item android:title="@string/customise">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:icon="@drawable/ic_menu_manage"-->
<!--                android:title="@string/about" />-->
<!--        </menu>-->
<!--    </item>-->


</menu>
