<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_headlines">

    <fragment
        android:id="@+id/nav_headlines"
        android:name="com.example.opennews.ui.home.HomeFragment"
        android:label="@string/menu_headlines"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_business"
        android:name="com.example.opennews.ui.business.BusinessFragment"
        android:label="@string/menu_business"
        tools:layout="@layout/fragment_sports"/>
    <fragment
        android:id="@+id/nav_sports"
        android:name="com.example.opennews.ui.sports.SportsFragment"
        android:label="@string/menu_sports"
        tools:layout="@layout/fragment_sports"/>
    <fragment
        android:id="@+id/nav_sci"
        android:name="com.example.opennews.ui.science.ScienceFragment"
        android:label="@string/menu_sci"
        tools:layout="@layout/fragment_sports"/>
    <fragment
        android:id="@+id/nav_ent"
        android:name="com.example.opennews.ui.entertainment.EntertainmentFragment"
        android:label="@string/menu_ent"
        tools:layout="@layout/fragment_sports"/>
    <fragment
        android:id="@+id/nav_saved"
        android:name="com.example.opennews.ui.saved.SavedFragment"
        android:label="@string/saved_label"
        tools:layout="@layout/fragment_sports"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.opennews.SettingsActivity$SettingsFragment"
        android:label="Settings"
        tools:layout="@xml/root_preferences"/>

</navigation>