<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_max_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.MaterialComponents.Light"
    android:layout_marginTop="@dimen/card_margin"
    android:layout_marginRight="@dimen/card_margin_horizontal"
    android:layout_marginLeft="@dimen/card_margin_horizontal"
    android:layout_marginBottom="@dimen/card_margin"
    android:elevation="@dimen/card_view_elevation">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/card_padding_horizontal"
        android:layout_marginLeft="@dimen/card_padding_horizontal">

        <TextView
            android:id="@+id/rv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_news"
            android:textSize="@dimen/title_size"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rv_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/rv_image"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="12dp"
            android:layout_marginStart="12dp"
            android:maxLines="2"/>
        <TextView
            android:id="@+id/rv_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/author_placeholder"
            android:textSize="@dimen/small_text_size"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_title"
            android:layout_margin="12dp"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/rv_source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/source_placeholder"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintStart_toEndOf="@id/rv_author"
            app:layout_constraintLeft_toRightOf="@id/rv_author"
            app:layout_constraintTop_toBottomOf="@id/rv_title"
            android:layout_margin="12dp"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/rv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date_placeholder"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintStart_toEndOf="@id/rv_source"
            app:layout_constraintEnd_toStartOf="@id/rv_image"
            app:layout_constraintLeft_toRightOf="@id/rv_source"
            app:layout_constraintRight_toLeftOf="@id/rv_image"
            app:layout_constraintTop_toBottomOf="@id/rv_title"
            android:layout_marginRight="12dp"
            android:layout_margin="12dp"
            android:maxLines="1"/>
        <ImageView
            android:id="@+id/rv_image"
            android:layout_width="@dimen/rv_image_width"
            android:layout_height="@dimen/rv_image_height"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="@dimen/rv_image_margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="@dimen/rv_image_margin"
            android:layout_marginEnd="@dimen/rv_image_margin"
            android:scaleType="fitXY"
            android:transitionName="imageShare"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/article_image"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>