<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:paddingBottom="@dimen/navbar_bottom_padding">
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:elevation="8dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:paddingRight="@dimen/nav_header_vertical_spacing"
        android:layout_marginLeft="@dimen/nav_header_vertical_spacing"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintLeft_toLeftOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:srcCompat="@mipmap/ic_open_news_foreground" />
    <TextView
        android:id="@+id/tv_nav_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:layout_marginRight="@dimen/text_margin_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingBottom="@dimen/username_bottom_padding"
        android:textColor="@color/colorIcons"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tv_nav_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/colorIcons"
        app:layout_constraintBottom_toTopOf="@+id/tv_nav_username"
        app:layout_constraintRight_toRightOf="@+id/tv_nav_username"/>

</androidx.constraintlayout.widget.ConstraintLayout>
