<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/article_layout">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <FrameLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
                <ImageView
                    android:id="@+id/expandedImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    android:transitionName="imageShare"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:background="?attr/colorPrimary"
                    android:contentDescription="@string/article_image"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:background="@drawable/gradient"/>
                <LinearLayout
                    android:id="@+id/meta_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/detail_box_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/article_title"
                        style="?android:attr/textAppearanceLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textColor="@color/colorIcons"
                        android:layout_margin="@dimen/detail_title_margin"
                        android:textSize="@dimen/detail_title_size"
                        android:lineSpacingMultiplier="0.9"
                        android:maxLines="2"
                        android:layout_marginStart="@dimen/detail_title_margin"
                        />
                    <TextView
                        android:id="@+id/article_byline"
                        style="?android:attr/textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:text="@string/author"
                        android:textColor="@color/colorIcons"
                        android:layout_marginLeft="@dimen/detail_title_margin"
                        android:layout_marginRight="@dimen/detail_title_margin"
                        android:textSize="@dimen/detail_small_text_size"
                        android:layout_height="wrap_content"
                        android:maxLines="1"/>
                </LinearLayout>
            </FrameLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <TextView
            android:id="@+id/article_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/detail_text_margin"
            android:textSize="@dimen/content_font_size"
            android:textColor="@color/colorSecondaryText"
            android:text="@string/content_placeholder" />
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:background="@color/colorAccent"
        android:tint="@color/colorIcons"
        android:contentDescription="@string/submit"
        app:srcCompat="@drawable/ic_open_in_browser_24px"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>